--- a/index.qmd
+++ b/index.qmd
@@ -26,6 +26,10 @@ execute:
 
 In Life Sciences and Bioinformatics, the R programming language is pivotal for data transformation, statistical analyses, and crafting publication-ready visualizations. This workshop goes beyond the basics, offering participants a comprehensive understanding of the R ecosystem. We explore best coding practices, code profiling, data wrangling, generating reports from notebooks and development of web apps using R.
 
+<!-- [[Slides &#9656;]{.btn .btn-primary}](slides/index.html) [[Labs &#9656;]{.btn .btn-primary}](labs/index.html) -->
+
+<br>
+
 ![](assets/logos/raukr.svg){height="1.2em" style="margin-bottom:-3px;"} &nbsp; ![](assets/logos/nbis-scilifelab.svg){height="1.1em"}
 
 ---
