--- a/slides/reticulate/index.qmd
+++ b/slides/reticulate/index.qmd
@@ -2,7 +2,10 @@
 title: "Reticulate"
 author: "Nina Norgren"
 image: "assets/featured.jpg"
-format: revealjs
+format:
+  revealjs:
+    css: assets/styles.css
+
 ---
 
 ## Packages {visibility="hidden"}
@@ -74,7 +77,7 @@ class(todays_r_date)
 
 Objects are automatically converted to R types, unless otherwise specified
 
-. . .
+## Importing Python modules
 
 ```{r}
 datetime <- import("datetime", convert = FALSE)
@@ -100,7 +103,7 @@ str(r_vec)
 
 `r_vec` is an R object.
 
-. . .
+## Importing built-in Python functions
 
 ```{r}
 builtins$len(r_vec); builtins$max(r_vec)
@@ -127,7 +130,9 @@ def add(x, y):
   return x + y
 ```
 
-. . .
+## Sourcing scripts
+
+Import your own python functions for use in R.
 
 R code:
 
@@ -139,7 +144,20 @@ res
 class(res)
 ```
 
-. . .
+## Sourcing scripts
+
+Import your own python functions for use in R.
+
+R code:
+
+```{r}
+#| eval: false
+source_python("python_functions.py")
+class(4)
+res <- add(4,5)
+res
+class(res)
+```
 
 Type `numeric` in and type `numeric` out. But what happens in between?
 
@@ -157,7 +175,6 @@ def add_with_print(x, y):
 
 ```{r}
 res2 <- add_with_print(4,5)
-py_capture_output(add_with_print(4,5))
 str(res2)
 ```
 
@@ -274,7 +291,7 @@ ggplot(movies_r, aes(x=startYear)) + geom_bar() +
 
 When calling python code from R, R data types are converted to Python types, and vice versa, when values are returned from Python to R they are converted back to R types.
 
-[**Conversion table**]{.large}
+## Conversion table
 
 ```{python}
 #| echo: false
@@ -306,14 +323,13 @@ def check_python_type(x):
   return x
 ```
 
-. . .
+## Type conversions
 
 ```{r}
 source_python("python_functions.py")
 
 r_var <- matrix(c(1,2,3,4),nrow=2, ncol=2)
 class(r_var)
-py_capture_output(check_python_type(r_var))
 r_var2 <- check_python_type(r_var)
 class(r_var2)
 ```
@@ -325,7 +341,6 @@ source_python("python_functions.py", convert=FALSE)
 
 r_var <- matrix(c(1,2,3,4),nrow=2, ncol=2)
 class(r_var)
-py_capture_output(check_python_type(r_var))
 r_var2 <- check_python_type(r_var)
 class(r_var2)
 r_var3 <- py_to_r(r_var2)
@@ -339,7 +354,6 @@ class(r_var3)
 ```{r}
 str(42)
 check_python_type(42)
-py_capture_output(check_python_type(42))
 ```
 
 . . .
@@ -347,25 +361,108 @@ py_capture_output(check_python_type(42))
 ```{r}
 str(42L)
 check_python_type(42L)
-py_capture_output(check_python_type(42L))
 ```
 
-## Type conversions
 
-- List conversions of single element vectors, automatically translated to Python scalar
+## Examples in bioinformatics
+
+#### Random forest classifier
 
 ```{r}
-str(c(24))
-check_python_type(c(24))
-py_capture_output(check_python_type(c(24)))
+#| eval: false
+
+conda_install("raukr-reticulate", "scikit-learn")
 ```
 
-. . .
+##
 
 ```{r}
-str(list(24))
-check_python_type(list(24))
-py_capture_output(check_python_type(list(24)))
+# Import scikit-learn's random forest classifier
+sklearn <- import("sklearn.ensemble")
+RandomForestClassifier <- sklearn$RandomForestClassifier
+
+# Create a random forest classifier
+clf <- RandomForestClassifier(n_estimators=100L)
+
+# Training data (example)
+X_train <- matrix(runif(1000), ncol=10)
+y_train <- sample(c(0, 1), 100, replace=TRUE)
+
+# Train the model
+clf$fit(X_train, y_train)
+
+# Predict on new data
+X_test <- matrix(runif(200), ncol=10)
+predictions <- clf$predict(X_test)
+predictions
+```
+## Examples in bioinformatics
+
+#### ENSEMBL API
+
+```{r}
+#| eval: false
+
+conda_install("raukr-reticulate", "ensembl-rest", pip=TRUE)
+```
+
+## 
+
+```{r}
+# Load the ensembl_rest library
+ensembl_rest <- import("ensembl_rest")
+
+# Fetch gene information for a given gene ID
+gene_info <- ensembl_rest$symbol_lookup(species='homo sapiens', symbol='BRCA2')
+
+# Print gene information
+gene_info$description
+```
+
+## Examples in bioinformatics
+
+#### Huggingface models
+
+```{r}
+#| eval: false
+
+conda_install("raukr-reticulate", "pytorch", channel = "pytorch")
+conda_install("raukr-reticulate", "transformers", pip=TRUE)
+```
+
+## 
+
+```{r}
+# Load the transformers library
+transformers <- import("transformers")
+
+# Load the pipeline for summarization
+summarizer <- transformers$pipeline("summarization", model="Falconsai/text_summarization")
+```
+
+## {.scrollable}
+**Text:**  
+
+Hugging Face: Revolutionizing Natural Language Processing
+
+In the rapidly evolving field of Natural Language Processing (NLP), Hugging Face has emerged as a prominent and innovative force. This article will explore the story and significance of Hugging Face, a company that has made remarkable contributions to NLP and AI as a whole. From its inception to its role in democratizing AI, Hugging Face has left an indelible mark on the industry.
+
+Transformative Innovations
+Hugging Face is best known for its open-source contributions, particularly the "Transformers" library. This library has become the de facto standard for NLP and enables researchers, developers, and organizations to easily access and utilize state-of-the-art pre-trained language models, such as BERT, GPT-3, and more. These models have countless applications, from chatbots and virtual assistants to language translation and sentiment analysis.
+
+1. **Transformers Library:** The Transformers library provides a unified interface for more than 50 pre-trained models, simplifying the development of NLP applications. It allows users to fine-tune these models for specific tasks, making it accessible to a wider audience.
+2. **Model Hub:** Hugging Face's Model Hub is a treasure trove of pre-trained models, making it simple for anyone to access, experiment with, and fine-tune models. Researchers and developers around the world can collaborate and share their models through this platform.
+3. **Hugging Face Transformers Community:** Hugging Face has fostered a vibrant online community where developers, researchers, and AI enthusiasts can share their knowledge, code, and insights. This collaborative spirit has accelerated the growth of NLP.
+
+##
+
+```{r}
+# Example text to summarize
+text <- "Hugging Face: Revolutionizing Natural Language Processing. In the rapidly evolving field of Natural Language Processing (NLP), Hugging Face has emerged as a prominent and innovative force. This article will explore the story and significance of Hugging Face, a company that has made remarkable contributions to NLP and AI as a whole. From its inception to its role in democratizing AI, Hugging Face has left an indelible mark on the industry. Transformative Innovations: Hugging Face is best known for its open-source contributions, particularly the Transformers library. This library has become the de facto standard for NLP and enables researchers, developers, and organizations to easily access and utilize state-of-the-art pre-trained language models, such as BERT, GPT-3, and more. These models have countless applications, from chatbots and virtual assistants to language translation and sentiment analysis. 1. Transformers Library: The Transformers library provides a unified interface for more than 50 pre-trained models, simplifying the development of NLP applications. It allows users to fine-tune these models for specific tasks, making it accessible to a wider audience. 2. Model Hub: Hugging Face's Model Hub is a treasure trove of pre-trained models, making it simple for anyone to access, experiment with, and fine-tune models. Researchers and developers around the world can collaborate and share their models through this platform. 3. Hugging Face Transformers Community: Hugging Face has fostered a vibrant online community where developers, researchers, and AI enthusiasts can share their knowledge, code, and insights. This collaborative spirit has accelerated the growth of NLP."
+
+# Perform summarization
+summary <- summarizer(text, max_length=100L, min_length=10L)
+summary
 ```
 
 ## {background-image="/assets/images/cover.jpg"}
